# pdfcli

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini
src/pdf_cli/: main.py
src/pdf_cli/commands/: __init__.py  decrypt.py  encrypt.py  extract.py  info.py  join.py  rotate.py  split.py  utils.py  watermark.py
tests/: test_crypt.py  test_extract.py  test_info.py  test_join.py  test_main.py  test_rotate.py  test_split.py  test_watermark.py
