[tool.poetry]
name = "pdf-cli"
version = "0.1.0"
description = "command line pdf tools"
authors = ["Stefano Apostolico <s.apostolico@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/saxix/pdfcli.git"
keywords = ["pdf",]
packages = [
    { include = "pdf_cli", from="src" },
]

[tool.poetry.scripts]
pdfcli = "pdf_cli.main:main"

[tool.poetry.dependencies]
python = ">3.6"
click = "^7.1.1"
pyPdf4 = "^1.27.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
tox = "^3.14.6"
pytest = "^5.4.1"
pytest-coverage = "^0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
